# multi_manifold

./: .gitignore  LICENSE  README.md  WORKSPACE  bazel-genfiles  bazel-manifold  bazel-out  bazel-testlogs
haskell/: BUILD.bazel  Main.hs
kotlin/: BUILD.bazel  kotlin_native.bzl
kotlin/core/: BUILD.bazel  manifold.kt  manifold_fast.kt
kotlin/jvm/: BUILD.bazel  main.kt
kotlin/native/: main.kt
rust/: BUILD.bazel
rust/src/: main.rs
